k8s/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: llm-app
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
