k8s/service-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: llm-app
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      protocol: TCP
